# AI-ChatBot

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
include/: chatbot.h  database.h  nlp.h
src/: chatbot.cpp  database.cpp  main.cpp  nlp.cpp
web/: README.md  index.html  script.js  style.css
